
Bugfixes (win32):

- [Bug 2998169] Memory corruption at faster transmission speeds.
  (bug introduced in 2.5-rc1)


Version 2.6      2011-11-02
---------------------------
New Features:

- Moved some of the examples to serial.tools so that they can be used
  with ``python -m``
- serial port enumeration now included as ``serial.tools.list_ports``
- URL handers for ``serial_for_url`` are now imported dynamically. This allows
  to add protocols w/o editing files. The list
  ``serial.protocol_handler_packages`` can be used to add or remove user
  packages with protocol handlers (see docs for details).
- new URL type: hwgrep://<regexp> uses list_ports module to search for ports
  by their description
- serveral internal changes to improve Python 3.x compatibility (setup.py,
  use of absolute imports and more)

Bugfixes:

- [Bug 3093882] calling open() on an already open port now raises an exception
- [Bug 3245627] connection-lost let rfc2217 hangs in closed loop
- [Patch 3147043] readlines() to support multi-character eol

Bugfixes (posix):

- [Patch 3316943] Avoid unneeded termios.tcsetattr calls in serialposix.py
- [Patch 2912349] Serial Scan as a Module with Mac Support

Bugfixes (win32):

- [Bug 3057499] writeTimeoutError when write Timeout is 0
- [Bug 3414327] Character out of range in list_ports_windows
- [Patch 3036175] Windows 98 Support fix
- [Patch 3054352] RTS automatic toggle, for RS485 functionality.
- Fix type definitions for 64 bit Windows compatibility


Version 2.7      2012-nn-nn
---------------------------
- Win32: setRTS and setDTR can be called before the port is opened and it will
  set the initial state on port open.
- Posix: add platform specific method: outWaiting (already pesent for Win32)
- Posix: rename flowControl to setXON to match name on Win32, add
  flowControlOut function

Bugfixes (posix):

- [Patch 3462364] Fix: NameError: global name 'base' is not defined

Bugfixes (win32):

- [Bug 3444941] ctypes.WinError() unicode error